@@ -30,6 +30,7 @@ fixed bugs:
 - fixed bug in CppAD when using signpower functions with expression pointers that do not fit into an unsigned int
 - fixed issue in cumulative constraint w.r.t. separation
 - fixed issue in cumulative constraint w.r.t. conflict analysis
+- fixed numerical bug in conflict.c relaxing bounds while keeping an infeasibility proof
 
 performance improvements:
 - also copying active tight cuts from the delayed cut pool when calling SCIPcopyCuts()
